--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/react": "^9.22.0",
     "@tailwindcss/vite": "^4.1.7",
@@ -77,8 +79,8 @@
     "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.5.1",
@@ -86,6 +88,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "type-fest": "^4.41.0",
+    "usehooks-ts": "^3.1.1",
     "web-vitals": "^5.0.1",
     "zod": "^3.25.23",
     "zustand": "^5.0.5"
@@ -113,7 +116,7 @@
     "bundlemon": "^2.0.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.25.0",
+    "eslint": "^9.27.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
