--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 VITE_ENABLE_MOCKS=false;
-VITE_AUTH_URL="https://api.growmaxapp.com/auth/"
+VITE_AUTH_URL="https://api.myapptino.com/auth/auth/"
+VITE_API_URL="https://api.myapptino.com/"
+
 
 
