--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/react": "^9.22.0",
+    "@storybook/core": "^8.6.14",
+    "@storybook/csf": "^0.1.13",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.75.7",
     "@tanstack/react-query-devtools": "^5.75.7",
