--- a/package.json
+++ b/package.json
@@ -63,9 +63,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@sentry/react": "^9.22.0",
     "@storybook/core": "^8.6.14",
     "@storybook/csf": "^0.1.13",
@@ -82,6 +87,7 @@
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "react": ">=18.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": ">=18.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
@@ -127,6 +133,7 @@
     "eslint-plugin-storybook": "^9.0.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "lighthouse": "^11.0.0",
     "lint-staged": "^16.0.0",
