--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@sentry/react": "^9.22.0",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.75.7",
@@ -80,11 +83,13 @@
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "react": ">=18.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": ">=18.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "type-fest": "^4.41.0",
@@ -120,7 +125,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "^9.0.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
