--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
@@ -95,7 +96,7 @@
     "type-fest": "^4.41.0",
     "usehooks-ts": "^3.1.1",
     "web-vitals": "^5.0.1",
-    "zod": "^3.25.23",
+    "zod": "^3.25.36",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -125,7 +126,6 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.0.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
