--- a/package.json
+++ b/package.json
@@ -68,8 +68,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sentry/react": "^9.22.0",
     "@storybook/core": "^8.6.14",
@@ -87,18 +91,20 @@
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "react": ">=18.0.0",
+    "react-day-picker": "8.10.1",
     "react-device-detect": "^2.2.3",
     "react-dom": ">=18.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "type-fest": "^4.41.0",
     "usehooks-ts": "^3.1.1",
     "web-vitals": "^5.0.1",
-    "zod": "^3.25.23",
+    "zod": "^3.25.41",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
