--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.75.7",
     "@tanstack/react-query-devtools": "^5.75.7",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -89,6 +90,7 @@
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.511.0",
+    "middleware": "^1.0.0",
     "nanoid": "^5.1.5",
     "react": ">=18.0.0",
     "react-day-picker": "8.10.1",
@@ -105,6 +107,7 @@
     "usehooks-ts": "^3.1.1",
     "web-vitals": "^5.0.1",
     "zod": "^3.25.41",
+    "zukeeper": "^1.0.2",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
