--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "type-fest": "^4.41.0",
