--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-i18next": "^15.5.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
