--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_ENABLE_MOCKS=false;
-VITE_AUTH_URL="https://api.myapptino.com/auth/auth/"
+VITE_AUTH_URL="https://api.growmaxapp.com/auth/auth/"
 VITE_API_URL="https://api.myapptino.com/"
 
 
