--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_ENABLE_MOCKS=false;
-VITE_AUTH_URL="https://api.myapptino.com/auth/auth/"
-VITE_API_URL="https://api.myapptino.com/"
+VITE_AUTH_URL="https://p5w483ff4a.execute-api.ap-south-1.amazonaws.com/schwing_api/auth/auth/"
+VITE_API_URL="https://p5w483ff4a.execute-api.ap-south-1.amazonaws.com/schwing_api/"
 
 
