--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "dev:host": "vite --host",
     "dev:mock": "VITE_ENABLE_MOCKS=true vite",
     "dev:debug": "vite --mode development --debug",
-    "build": "tsc -b && vite build",
-    "build:staging": "tsc -b && vite build --mode staging",
+    "build": "vite build",
+    "build:with-types": "tsc -b && vite build",
+    "build:staging": "vite build --mode staging",
     "build:analyze": "vite build --mode analyze",
-    "build:profile": "tsc -b && vite build --profile",
+    "build:profile": "vite build --profile",
     "preview": "vite preview",
     "preview:dist": "serve -s dist -p 3000",
     "type-check": "tsc --noEmit",
@@ -135,6 +136,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
